@@ -1,0 +1,37 @@
+/* Gperf data file for creating the lookup function in boolexp.c to see
+ * if a given flag lock name is valid.	   
+ */
+
+%language=ANSI-C
+%define hash-function-name bflag_hash
+%define lookup-function-name is_allowed_bflag
+%readonly-tables
+%enum 
+%compare-lengths
+
+%struct-type
+%define initializer-suffix ,-1
+
+%{
+/** The flag lock key (A^B) only allows a few values for A. This
+ * struct and the the following table define the allowable ones. When
+ * adding a new type here, a matching new bytecode instruction should
+ * be added. */
+%}
+struct flag_lock_types {
+  const char *name; /**< The value of A */
+  bvm_opcode op;  /**< The associated opcode */
+};
+
+%%
+FLAG, OP_TFLAG
+POWER, OP_TPOWER
+TYPE, OP_TTYPE
+NAME, OP_TNAME
+CHANNEL, OP_TCHANNEL
+OBJID, OP_TIS
+IP, OP_TIP
+HOSTNAME, OP_THOSTNAME
+DBREFLIST, OP_TDBREFLIST
+%%
+
